--- a/index.html
+++ b/index.html
@@ -41,51 +41,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
-              <li class="nav-item active">
-                <a class="nav-link" href="#hero-area">
-                  Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#feature">
-                  Feature
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#services">
-                  Services
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#team">
-                  Team
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#pricing">
-                  Pricing
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#portfolios">
-                  Works
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#testimonial">
-                  Testimonial
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#blog">
-                  Blog
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#contact">
-                  Contact
-                </a>
-              </li>
+            
             </ul>
           </div>
         </div>
@@ -98,7 +54,8 @@
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <div class="contents text-center">
-                <h2 class="head-title wow fadeInUp">We Discover, Design & Build Digital <br> Presence of Businesses</h2>
+                <h2 class="head-title wow fadeInUp">全國最狂!企業聯合振興大會<br>吃甜點、舒壓按摩、臉蛋變水噹噹 <br>真的通通不用錢!
+</h2>
                 <div class="header-button wow fadeInUp" data-wow-delay="0.3s">
                   <a href="#services" class="btn btn-common">Explore</a>
                 </div>
